syntax="proto3";
//
message LoggerInfoRequest {  
 string name=1;
 bool includeNoAppender=2;
 string classLoaderHashCode=3;
}
